# PythonExamples

./: .gitignore  ENI _Qfact_gl CM.py  Elo_World_Kernel_with_outlier_detection_SE.ipynb  featureExtraction 13Nov CM.py  pyproject.toml
AmazonFoodReviews/: .README.md  1Data Wrangling.ipynb  2Classification Methodology.ipynb  3Using a pipline.ipynb  Pipeline example.ipynb
AmazonFoodReviews/useful scripts/: Audrey_Script.ipynb  LucyEdmans_Script.py  NLTK exploration.ipynb
FCA interview/: 2nd Stage Data Analyst Assessment - Data Tables.xlsx  FCA intreview notebook.ipynb
FreeAgentInterview/: FreeAgent task 2.ipynb
TV Squared/: RAD-518 neustar data sample exploration.ipynb  RAD-570 Control group functions - Daily level.ipynb  RAD-570 Control group functions.ipynb  RAD-570 Control groups analysis.ipynb  RAD-570 Exposed group analysis.ipynb  RAD-570 Original query exploration - vInnoXP.ipynb  RAD-570 original query exploration.ipynb
TescoBank interview/: Bank leavers - RF.ipynb
visit_scotland/: Task.ipynb
