[tool.poetry]
name = "pythonexamples"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.2.9"
scikit-learn = "^1.0.2"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
nltk = "^3.7"
imblearn = "^0.0"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
